Agregado un audio(fer)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div class="fondo-song-queimporta">
                 <button type="button" class="song-queimporta" onclick="song_que_me_importa.play()">Que me importa</button>
             </div>
+            <div class="fondo-song-curso">
+                <button type="button" class="song-curso" onclick="song_curso.play()">Curso de M**</button>
+            </div>
         </main>
     </div>
     <script src="./code/code.js"></script>
