agrendo nuevos audios y mejorando fondo

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PA_audios</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="icon" href="./src/img/logo.png">
 </head>
 <body>
     <div class="container-principal">
         <header class="container-nav">
             <a href="#" class="logo">
                 <img src="./src/img/logo.png" alt="logito gosu">
-                <h2 class="nombre-grupo">Palabras Magicas</h2>
+                <h2 class="nombre-grupo">Audios</h2>
             </a>
             <nav class="enlaces">
                 <a href="#" class="nav" > Palabras Magicas </a>
@@ -22,14 +23,64 @@
             </nav>            
         </header>
         <main class="container-main">
-            <div class="fondo-song-mato">
+            <div class="fondo-song-carlitos">
                 <button type="button" class="song-mato" onclick="song_te_mato.play()">Te veo y te mato</button>
             </div>
-            <div class="fondo-song-queimporta">
+            <div class="fondo-song-jose">
                 <button type="button" class="song-queimporta" onclick="song_que_me_importa.play()">Que me importa</button>
             </div>
-            <div class="fondo-song-curso">
+            <div class="fondo-song-fer">
                 <button type="button" class="song-curso" onclick="song_curso.play()">Curso de M**</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-damelo" onclick="song_damelo.play()">Que tu me lo des 🥵</button>
+            </div>
+
+            <div class="fondo-song-jose">
+                <button type="button" class="song-amanecercomotu" onclick="song_amanecercomotu.play()">Quiero amanecer como tú</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-becado" onclick="song_becado.play()">Piensas que tienes privilegios</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-caldode" onclick="song_caldode.play()">El caldo</button>
+            </div>
+            <div class="fondo-song-carlitos">
+                <button type="button" class="song-chamo" onclick="song_chamo.play()">Contrato del chamo</button>
+            </div>
+            <div class="fondo-song-josue">
+                <button type="button" class="song-ingeniero" onclick="song_ingeniero.play()">Oe mocoso</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-leder" onclick="song_leder.play()">El real LEDER</button>
+            </div>
+
+            <div class="fondo-song-josue">
+                <button type="button" class="song-oeingeniero" onclick="song_oeingeniero.play()">Oe ingeniero</button>
+            </div>
+            <div class="fondo-song-leo">
+                <button type="button" class="song-pelele" onclick="song_pelele.play()">Yo no soy un pelele</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-perro" onclick="song_perro.play()">Eres perro</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-retirate" onclick="song_retirate.play()">Retirate</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-retiratemr" onclick="song_retiratemr.play()">Retirate mr* 🤬</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-takataka" onclick="song_takataka.play()">takataka</button>
+            </div>
+            <div class="fondo-song-carlitos">
+                <button type="button" class="song-tamuerto" onclick="song_tamuerto.play()">Estas muerto</button>
+            </div>
+            <div class="fondo-song-carlitos">
+                <button type="button" class="song-malaga" onclick="song_malaga.play()">Muerto</button>
+            </div>
+            <div class="fondo-song-jose">
+                <button type="button" class="song-unicompleto" onclick="song_unicompleto.play()">Esto es la UNI!!!</button>
             </div>
         </main>
     </div>
